Los attachments (fotos y adjuntos) pueden salvarse en Cloudinary o localmente.
Si existe la variable de entorno CLOUDINARY_URL se salvan en Cloudinary.
En caso contrario se salvan en el sistema de ficheros local, en public/uploads.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "moff_heroku": "heroku --app dcrmt maintenance:off"
   },
   "engines": {
-    "node": "7.10.1",
-    "npm": "3.10.x"
+    "node": "8.9.x",
+    "npm": "4.6.x"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
